interpreter/tests/snapshots/interpreter__name_attribute_requires_value.snap
---
source: interpreter/tests/interpreter.rs
expression: name_att_without_arg_err
---
Error {
    inner_error: RequiredArguments {
        required: 1,
        recieved: 0,
    },
    span: Span {
        start: Location {
            line: 2,
            col: 9,
        },
        end: Location {
            line: 2,
            col: 13,
        },
    },
    message: Some(
        "@name(..) must be given an argument, like @name(\"req_1\")",
    ),
    context: ErrorSourceContext {
        above: Some(
            "        set BASE_URL env(\"b_url\")",
        ),
        line: "        @name",
        below: Some(
            "        get /api {}",
        ),
    },
}
