interpreter/tests/snapshots/interpreter__prevents_duplicate_attributes-2.snap
---
source: interpreter/tests/interpreter.rs
expression: duped_att_err
---
Error {
    inner_error: DuplicateAttribute {
        name: "name",
    },
    location: 3:9,
    message: None,
    context: ErrorSourceContext {
        above: Some(
            "        @name(\"a\")",
        ),
        line: "        @name(\"b\")",
        below: Some(
            "        get /api {}",
        ),
    },
}
