interpreter/tests/snapshots/interpreter__prevents_duplicate_attributes.snap
---
source: interpreter/tests/interpreter.rs
expression: duped_att_err
---
Error {
    inner_error: DuplicateAttribute {
        name: "log",
    },
    span: Span {
        start: Location {
            line: 3,
            col: 9,
        },
        end: Location {
            line: 3,
            col: 12,
        },
    },
    message: None,
    context: ErrorSourceContext {
        above: Some(
            "        @log",
        ),
        line: "        @log",
        below: Some(
            "        get /api {}",
        ),
    },
}
